// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow Button should take right direction 1`] = `
.c0 {
  width: 32px;
  height: 32px;
  padding: 2px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
  background: var(--violet);
  border-radius: 12px;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c0:hover:not([disabled]) {
  border-radius: 50%;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  fill: white;
}

<button
  class="c0"
  type="button"
>
  <svg
    class="c1"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.92 11.62a1 1 0 0 0-.21-.33l-5-5a1 1 0 0 0-1.42 1.42l3.3 3.29H7a1 1 0 0 0 0 2h7.59l-3.3 3.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5-5a1 1 0 0 0 .21-.33 1 1 0 0 0 0-.76Z"
    />
  </svg>
</button>
`;

exports[`Arrow Button should take right direction 2`] = `
.c0 {
  width: 32px;
  height: 32px;
  padding: 2px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
  background: var(--violet);
  border-radius: 12px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0:hover:not([disabled]) {
  border-radius: 50%;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  fill: white;
}

<button
  class="c0"
  type="button"
>
  <svg
    class="c1"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.92 11.62a1 1 0 0 0-.21-.33l-5-5a1 1 0 0 0-1.42 1.42l3.3 3.29H7a1 1 0 0 0 0 2h7.59l-3.3 3.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5-5a1 1 0 0 0 .21-.33 1 1 0 0 0 0-.76Z"
    />
  </svg>
</button>
`;

exports[`Arrow Button should take right direction 3`] = `
.c0 {
  width: 32px;
  height: 32px;
  padding: 2px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
  background: var(--violet);
  border-radius: 12px;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.c0:hover:not([disabled]) {
  border-radius: 50%;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  fill: white;
}

<button
  class="c0"
  type="button"
>
  <svg
    class="c1"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.92 11.62a1 1 0 0 0-.21-.33l-5-5a1 1 0 0 0-1.42 1.42l3.3 3.29H7a1 1 0 0 0 0 2h7.59l-3.3 3.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5-5a1 1 0 0 0 .21-.33 1 1 0 0 0 0-.76Z"
    />
  </svg>
</button>
`;
